# sfml-dynamic-shadows

./: .gitignore  CMakeLists.txt  README.md
apps/: main.cpp
include/: version.h  version_config.h.in
src/: CMakeLists.txt  demo.cpp  demo.hpp  main.cpp
